--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,32 +6,21 @@ body {
 	color: $primary-color;
 	margin: 0;
 }
-nav {
-	height: 100px;
-	ul{
-		margin: 0;
-		list-style: none; 
-		li {
-		 display: inline-block;
-         padding:0 4vw;
-		}
-	}
-	.brand{
-		width: 10vw;
-		height: auto;
-	}
-	.nav-left {
-		float: left;
-		padding-left:20px;
-	}
-	.nav-right{
-		float: right;
-		padding-right:20px;
-	}
-	a {
-		display: block;
-		padding: 6px 12px;
+nav{
+	display: flex;
+	justify-content: center;
+	a{
+		order: 1;
+		width: 100%;
+		text-align: center;
+		font-weight:bold;
+		font-size: 14px;
+		margin-top:50px;
 		text-decoration: none;
-		color: $primary-color;
+		color:$primary-color; 
+		svg{
+			margin-top: -28px;
+			width:226px;
+		}
 	}
 }
