--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,19 +8,40 @@ body {
 }
 nav{
 	display: flex;
-	justify-content: center;
+	align-items:center;
+	justify-content: space-between ;
+	padding: 25px 5%;
 	a{
+		position: relative;
 		order: 1;
-		width: 100%;
 		text-align: center;
 		font-weight:bold;
 		font-size: 14px;
-		margin-top:50px;
 		text-decoration: none;
-		color:$primary-color; 
-		svg{
-			margin-top: -28px;
-			width:226px;
-		}
+		color:$primary-color;
+	}
+	a:before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 4px;
+		bottom: -5px;
+		left: 0;
+		background-color: #000;
+		visibility: hidden;
+		-webkit-transform: scaleX(0);
+		transform: scaleX(0);
+		-webkit-transition: all 0.3s ease-in-out 0s;
+		transition: all 0.3s ease-in-out 0s;
+	}
+
+	a:hover:before {
+		visibility: visible;
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+	svg{
+		width:226px;
+		order: 1;
 	}
 }
