--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,11 @@
 $font-stack:'Montserrat', sans-serif;
-$primary-color: #000;
+$primary-color:#4e4e4e;;
 
 body {
 	font: 100% $font-stack;
 	color: $primary-color;
 	margin: 0;
+  overflow-x: hidden;
 }
 nav{
 	display: flex;
@@ -53,39 +54,37 @@ nav{
 		height: 34.5vw;
 		float: left;
 		padding: 0;
-		h2{
-			font-size: 48px;
-			font-weight: bold;
-			line-height:47px;
-			letter-spacing: 5px;
-			margin: 0;
-		}
-		h4{
-			font-size: 36px;
-			font-weight: 300;
-			line-height:47px;
-			letter-spacing: 8px;
-			color: #828282;
-			margin: 0;
-			margin-top:24px;
-		}
-		p{
-			font-size: 14px;
-			font-weight: bold;
-			line-height: 26px;
-			text-align:justify;
-			letter-spacing: 5px;
-			color: #333;
-			margin-top:35px;
-		}
+		margin: 0;
 	}
 	.right-content{
 		width:  34.5vw;
 		height: 34.5vw;
 		float: right;
 		padding: 0;
-		img{
-			padding: 10px;
+		h2{
+			font-size: 32px;
+			font-weight: 600;
+			line-height: 35px;
+			letter-spacing: 10px;
+			color: #c0c0c0;
+			margin: 0;
+		}
+		h4{
+			font-size: 26px;
+			font-weight: 300;
+			line-height:47px;
+			letter-spacing: 4px;
+			color: $primary-color;
+			margin: 0;
+			margin-top: 8px;
+		}
+		p{
+			font-size: 14px;
+			line-height: 26px;
+			text-align:justify;
+			letter-spacing: 3px;
+			color: #c0c0c0;
+			margin-top: 9px;
 		}
 	}
 }
