--- a/sass/accordion.scss
+++ b/sass/accordion.scss
@@ -1,55 +1,128 @@
-
-//urls
-$url_0: url(https://unsplash.it/650/350?image=675);
-$url_1: url(https://unsplash.it/650/350?image=674);
-$url_2: url(https://unsplash.it/650/350?image=673);
-$url_3: url(https://unsplash.it/650/350?image=672);
-$url_4: url(https://unsplash.it/650/350?image=671);
-$url_5: url(https://unsplash.it/650/350?image=670);
-
 .accordion {
-	width: 100%;
-	max-width: 1080px;
-	height: 350px;
-	overflow: hidden;
-	margin: 50px auto;
-	ul: ;
+  width: 100%;
+  max-width: 1080px;
+  height: 350px;
+  overflow: hidden;
+  margin: 50px auto;
+  ul {
+    width: 100%;
+    display: table;
+    table-layout: fixed;
+    margin: 0;
+    padding: 0;
+    li {
+      display: table-cell;
+      vertical-align: bottom;
+      position: relative;
+      width: 16.666%;
+      height: 350px;
+      background-repeat: no-repeat;
+      background-position: center center;
+      transition: all 500ms ease;
+      div {
+        display: block;
+        overflow: hidden;
+        width: 100%;
+        a {
+          display: block;
+          height: 350px;
+          width: 100%;
+          position: relative;
+          z-index: 3;
+          vertical-align: bottom;
+          padding: 15px 20px;
+          box-sizing: border-box;
+          color: #fff;
+          text-decoration: none;
+          font-family: Open Sans, sans-serif;
+          transition: all 200ms ease;
+          * {
+            opacity: 0;
+            margin: 0;
+            width: 100%;
+            text-overflow: ellipsis;
+            position: relative;
+            z-index: 5;
+            white-space: nowrap;
+            overflow: hidden;
+            -webkit-transform: translateX(-20px);
+            transform: translateX(-20px);
+            -webkit-transition: all 400ms ease;
+            transition: all 400ms ease;
+          }
+          h2 {
+            font-family: Montserrat, sans-serif;
+            text-overflow: clip;
+            font-size: 24px;
+            text-transform: uppercase;
+            margin-bottom: 2px;
+            top: 160px;
+          }
+          p {
+            top: 160px;
+            font-size: 13.5px;
+          }
+        }
+      }
+      &:nth-child(1) {
+        background-image: url("https://unsplash.it/650/350?image=675");
+      }
+      &:nth-child(2) {
+        background-image: url("https://unsplash.it/650/350?image=674");
+      }
+      &:nth-child(3) {
+        background-image: url("https://unsplash.it/650/350?image=673");
+      }
+      &:nth-child(4) {
+        background-image: url("https://unsplash.it/650/350?image=672");
+      }
+      &:nth-child(5) {
+        background-image: url("https://unsplash.it/650/350?image=671");
+      }
+      &:nth-child(6) {
+        background-image: url("https://unsplash.it/650/350?image=670");
+      }
+    }
+    &:hover li {
+      width: 8%;
+      &:hover {
+        width: 60%;
+        a {
+          background: rgba(0, 0, 0, 0.4);
+          * {
+            opacity: 1;
+            -webkit-transform: translateX(0);
+            transform: translateX(0);
+          }
+        }
+      }
+    }
+  }
 }
-h2 {
-	text-overflow: clip;
-	font-size: 24px;
-	text-transform: uppercase;
-	margin-bottom: 2px;
-	top: 160px;
-}
-p {
-	top: 160px;
-	font-size: 13.5px;
-}
-li {
-	&:nth-child(1) {
-		background-image: $url_0;
-	}
-	&:nth-child(2) {
-		background-image: $url_1;
-	}
-	&:nth-child(3) {
-		background-image: $url_2;
-	}
-	&:nth-child(4) {
-		background-image: $url_3;
-	}
-	&:nth-child(5) {
-		background-image: $url_4;
-	}
-	&:nth-child(6) {
-		background-image: $url_5;
-	}
-}
-ul:hover li {
-	width: 8%;
-	&:hover {
-		width: 60%;
-		a: ;
-	}
+
+@media screen and (max-width: 600px) {
+  body {
+    margin: 0;
+  }
+  .accordion {
+    height: auto;
+    ul {
+      li, &:hover li {
+        position: relative;
+        display: table;
+        table-layout: fixed;
+        width: 100%;
+        -webkit-transition: none;
+        transition: none;
+        &:hover {
+          position: relative;
+          display: table;
+          table-layout: fixed;
+          width: 100%;
+          -webkit-transition: none;
+          transition: none;
+        }
+      }
+    }
+  }
 }
