removing top padding

--- a/sass/accordion.scss
+++ b/sass/accordion.scss
@@ -3,7 +3,7 @@
   max-width: 1080px;
   height: 350px;
   overflow: hidden;
-  margin: 50px auto;
+  margin: 0 auto;
   ul {
     width: 100%;
     display: table;
