--- a/sass/main.scss
+++ b/sass/main.scss
@@ -57,34 +57,31 @@ nav{
 		margin: 0;
 	}
 	.right-content{
-		width:  34.5vw;
+		width:  30.5vw;
 		height: 34.5vw;
 		float: right;
 		padding: 0;
 		h2{
-			font-size: 32px;
-			font-weight: 600;
-			line-height: 35px;
+			font-weight: 800;
+			line-height: 22px;
 			letter-spacing: 10px;
-			color: #c0c0c0;
+			color: $primary-color;
 			margin: 0;
 		}
 		h4{
-			font-size: 26px;
 			font-weight: 300;
 			line-height:47px;
-			letter-spacing: 4px;
+			letter-spacing: 3px;
 			color: $primary-color;
 			margin: 0;
-			margin-top: 8px;
 		}
 		p{
-			font-size: 14px;
-			line-height: 26px;
+			font-size: 12px;
+			line-height: 16px;
 			text-align:justify;
 			letter-spacing: 3px;
 			color: #c0c0c0;
-			margin-top: 9px;
+      margin: 0;
 		}
 	}
 }
