--- a/sass/accordion.scss
+++ b/sass/accordion.scss
@@ -1,7 +1,7 @@
 .accordion {
   width: 100%;
   max-width: 1080px;
-  height: 350px;
+  height: 24vw;
   overflow: hidden;
   margin: 0 auto;
   ul {
@@ -15,7 +15,7 @@
       vertical-align: bottom;
       position: relative;
       width: 16.666%;
-      height: 350px;
+      height: 24vw;
       background-repeat: no-repeat;
       background-position: center center;
       transition: all 500ms ease;
@@ -25,7 +25,7 @@
         width: 100%;
         a {
           display: block;
-          height: 350px;
+          height: 24vw;
           width: 100%;
           position: relative;
           z-index: 3;
